SonarCloud error correction